--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
     <script>
       window.formbutton =
